--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   dio: ^5.3.3
   flutter:
     sdk: flutter
+  googleapis: ^11.4.0
+  googleapis_auth: ^1.4.1
+  gsheets: ^0.5.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
